# ovh-dns-cli

./: README.md  pyproject.toml
ovh_dns_cli/: cli.py
