[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ovh-dns-cli"
version = "0.1.0"
description = "CLI to manage OVH DNS records"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Shubham Sharma" }]
dependencies = [
    "click>=8.0",
    "ovh>=1.0",
    "rich>=13.0",
]

[project.scripts]
ovh-dns = "ovh_dns_cli.cli:cli"

[project.urls]
Repository = "https://github.com/shubs/ovh-dns-cli"
